--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lab1-beg-track",
+  "name": "F2-JavaScript-lab1-adv-track",
   "version": "0.0.0",
-  "description": "Codefellows Foundations II: Javascript, Lab 1, Beginner Track",
+  "description": "Codefellows Foundations II: Javascript, Lab 1, Advanced Track",
   "dependencies": {
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0"
